// Copyright (C) 2023 Wooyang2018
// Licensed under the GNU General Public License v3.0

syntax = "proto3";

package core.pb;

message Block {
  bytes hash = 1;
  uint32 view = 2;
  uint64 height = 3;
  bytes parentHash = 4;
  uint64 execHeight = 5;
  bytes merkleRoot = 6;
  int64 timestamp = 7;
  repeated bytes transactions = 8; // transaction hashes
  QuorumCert quorumCert = 9;
  Signature signature = 10;
}

message BlockCommit {
  bytes hash = 1;
  double elapsedExec = 2;
  double elapsedMerkle = 3;
  repeated bytes oldBlockTxs = 5;
  repeated StateChange stateChanges = 6;
  bytes leafCount = 7;
  bytes merkleRoot = 8;
}

message Signature {
  bytes pubKey = 1;
  bytes value = 2;
}

message QuorumCert {
  uint32 view = 1;
  bytes blockHash = 2;
  repeated uint64 quotas = 3;
  repeated Signature signatures = 4;
  Signature signature = 5;
}

message Vote {
  uint32 view = 1;
  uint64 quota = 2;
  bytes blockHash = 3;
  Signature signature = 4;
}

message Transaction {
  bytes hash = 1;
  bytes signature = 2;
  int64 nonce = 3;
  bytes sender = 4;
  bytes codeAddr = 5;
  bytes input = 6;
  uint64 expiry = 7; // expiry block height
}

message TxCommit {
  bytes hash = 1;
  bytes blockHash = 2;
  uint64 blockHeight = 3;
  string error = 4;
  double elapsed = 5;
}

message TxList {
  repeated Transaction list = 1;
}

message StateChange {
  bytes key = 1;
  bytes value = 2;
  bytes prevValue = 3;
  bytes treeIndex = 4;
  bytes prevTreeIndex = 5;
}
